--- a/송성민/about.html
+++ b/송성민/about.html
@@ -19,9 +19,7 @@
                 <ul>
                     <li class="active"><a href="main.html">001/about</a></li>
                     <li><a href="work.html">002/Work</a></li>
-                    <li><a href="team.html">003/Team</a></li>
-                    <li><a href="comment.html">004/Comment</a></li>
-                    <li><a href="contact.html">005/Contact</a></li>
+                    <li><a href="contact2.html">003/Contact</a></li>
                 </ul>
             </nav>
             <div class="right"></div>
