--- a/송성민/work.html
+++ b/송성민/work.html
@@ -18,11 +18,9 @@
             </h1>
             <nav class="mainNav">
                 <ul>
-                    <li><a href="index2.html">001/Main</a></li>
+                    <li><a href="about.html">001/Main</a></li>
                     <li class="active"><a href="work.html">002/Work</a></li>
-                    <li><a href="team.html">003/Team</a></li>
-                    <li><a href="comment.html">004/Comment</a></li>
-                    <li><a href="contact.html">005/Contact</a></li>
+                    <li><a href="contact2.html">003/Contact</a></li>
                 </ul>
             </nav>
             <div class="right">
