--- a/김진우/index.html
+++ b/김진우/index.html
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-        <div class="layer layer2 youtube none">
+        <div class="layer layer2 youtube">
             <div class="layer__contents">
                 <h3>코딩 유튜버</h3>
                 <span class="small">Youtube API <em>API를 이용하여 코딩 관련된 최신 영상을 보여줍니다.</em></span>
@@ -265,7 +265,7 @@
             </div>
         </div>
 
-        <div class="layer layer3 react">
+        <div class="layer layer3 react none">
             <div class="layer__contents">
                 <h3>리액트 블로그</h3>
                 <span class="small">최신 코딩 관련 영상을 볼 수 있습니다.</span>
