--- a/김이현/index2.html
+++ b/김이현/index2.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="assets/css/reset.css" />
         <link rel="stylesheet" href="assets/css/style2.css" />
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" />
     </head>
     <body>
         <section id="section1">
@@ -116,7 +117,50 @@
             </div>
         </section>
         <!-- //section3 -->
-        <section id="section4"></section>
+
+        <section id="section4">
+            <div class="work__wrap">
+                <div class="work w1">
+                    <div class="left">
+                        <div class="text">
+                            <h2>Codepin <em>Project</em></h2>
+                            <p>
+                                CodePin은 프로그래머와 IT 전문가들을 위한 플랫폼으로,<br />
+                                코드 스니펫을 저장하고 관리하며, 다른 사용자들과<br />쉽게 공유할 수 있는 기능을
+                                제공합니다.
+                            </p>
+                            <a href="/">[code view]</a>
+                            <a href="/">[site view]</a>
+                        </div>
+                        <div class="skill">
+                            <em>[skill]</em>
+                            <div>
+                                <i class="devicon-firebase-plain"></i>
+                                <i class="devicon-github-original"></i>
+                                <i class="devicon-insomnia-plain"></i>
+                                <i class="devicon-mysql-original"></i>
+                                <i class="devicon-python-plain"></i>
+                                <i class="devicon-react-original"></i>
+                            </div>
+                            <em>[time]</em>
+                            <div>1day ~ 2day</div>
+                            <em>[area]</em>
+                            <div>
+                                <span>design: gang yun</span>
+                                <span>coding: hwang yun</span>
+                                <span>front: young yun</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <img src="./assets/img/shot1.png" alt="p" />
+                    </div>
+                </div>
+                <div class="work w2"></div>
+            </div>
+        </section>
+        <!-- //section4 -->
+
         <section id="section5"></section>
     </body>
 </html>
