--- a/김혜지/index2.html
+++ b/김혜지/index2.html
@@ -9,7 +9,15 @@
         <link rel="stylesheet" href="assets/css/style2.css" />
     </head>
     <body>
-        <header id="header"></header>
+        <header id="header">
+            <ul>
+                <li><a href="#section1">Home</a></li>
+                <li><a href="#section2">about</a></li>
+                <li><a href="#section3">skill</a></li>
+                <li><a href="#section4">work</a></li>
+                <li><a href="#section5">contact</a></li>
+            </ul>
+        </header>
         <!-- //header -->
 
         <section id="contact">
@@ -196,7 +204,13 @@
                                     rx="20.45"
                                     ry="11.66"
                                 />
-                                <ellipse class="st11" cx="488.46" cy="315.4" rx="20.32" ry="11.66" />
+                                <ellipse
+                                    class="st11"
+                                    cx="488.46"
+                                    cy="315.4"
+                                    rx="20.32"
+                                    ry="11.66"
+                                />
                                 <path
                                     class="st1"
                                     d="M442.44,324.69c4.06,5.21,6.45,9.94,6.73,12.71c0.12,1.23,0.14,2.61,0.14,2.61c0.03,2.65-0.29,4.93-0.33,4.93
@@ -664,19 +678,31 @@
                             d="M82.95,383.41c0,0,16.51,32.09,7.83,37.87c-4.1,2.73-9.4,4.23-14.17,2.43c-7.92-2.99-10.24-15.04-11.53-21.36
 		c-0.33-1.6-0.52-2.97-0.64-3.96"
                         />
-                        <path class="st1" d="M58.27,397.28c0,0,4.94,2.04,8.34,0c3.4-2.04,3.4-2.04,3.4-2.04" />
+                        <path
+                            class="st1"
+                            d="M58.27,397.28c0,0,4.94,2.04,8.34,0c3.4-2.04,3.4-2.04,3.4-2.04"
+                        />
                         <path
                             class="st3"
                             d="M38.78,401.07c0.24,9.6,3.43,17.25,7.63,22.11c2.05,2.38,5.79,5.95,11.22,5.92c4.24-0.02,9.14-2.32,10.91-6.27
 		c1.18-2.64,0.31-4.56-1.93-14.33c-1-4.35-1.73-7.89-2.17-10.11"
                         />
-                        <path class="st1" d="M34.14,399.88c0,0,5.32,1.32,6.94,0.34s1.62-0.98,1.62-0.98" />
-                        <path class="st1" d="M291.12,234.74c0,0,7.32,7.65,13.62,3.65c6.3-4,3.83-2.47,3.83-2.47" />
+                        <path
+                            class="st1"
+                            d="M34.14,399.88c0,0,5.32,1.32,6.94,0.34s1.62-0.98,1.62-0.98"
+                        />
+                        <path
+                            class="st1"
+                            d="M291.12,234.74c0,0,7.32,7.65,13.62,3.65c6.3-4,3.83-2.47,3.83-2.47"
+                        />
                         <path
                             class="st1"
                             d="M318.78,230.3c0,0,21.28-7.74,22.98,14.21c1.7,21.96-5.96,37.62-20.34,34.64"
                         />
-                        <path class="st1" d="M291.54,279.52c0,0,2.38-4.53,9.7-3.68c7.32,0.85,7.32,0.85,7.32,0.85" />
+                        <path
+                            class="st1"
+                            d="M291.54,279.52c0,0,2.38-4.53,9.7-3.68c7.32,0.85,7.32,0.85,7.32,0.85"
+                        />
                         <ellipse cx="327.54" cy="251.67" rx="5.45" ry="13.02" />
                         <path class="st1" d="M195.37,129.86c0,0,3.57-23.98,26.89-14.1" />
                         <path class="st1" d="M287.12,126.13c0,0,4.26-23.66,26.89-12.77" />
@@ -973,12 +999,13 @@
                 <h3>about</h3>
             </div>
             <p class="desc">
-                안녕하세요. 디자인과 코딩 모두를 아우르는 퍼블리셔가 되고 싶은 신입 웹 퍼블리셔 김혜지입니다.<br />저의
-                인생은 항상 도전의 연속이었습니다. <br />저는
-                <em>'도전하지 않고 후회하는 것보다 하고 후회하는 것이 낫다'</em>라는 모토로 저의 인생을 만들어왔습니다.
-                <br />해보지도 않고 후회하는 일은 만들고 싶지 않았기에 하고 싶은 것은 꼭 시도했습니다. <br />이제는
-                마음에 항상 가지고 있었던 <em>'디자인'</em>이라는 요소와<br />새로운 분야인 '코딩'을 연결하여 꾸준히
-                저의 역량을 키워나가고 싶습니다.
+                안녕하세요. 디자인과 코딩 모두를 아우르는 퍼블리셔가 되고 싶은 신입 웹 퍼블리셔
+                김혜지입니다.<br />저의 인생은 항상 도전의 연속이었습니다. <br />저는
+                <em>'도전하지 않고 후회하는 것보다 하고 후회하는 것이 낫다'</em>라는 모토로 저의
+                인생을 만들어왔습니다. <br />해보지도 않고 후회하는 일은 만들고 싶지 않았기에 하고
+                싶은 것은 꼭 시도했습니다. <br />이제는 마음에 항상 가지고 있었던
+                <em>'디자인'</em>이라는 요소와<br />새로운 분야인 '코딩'을 연결하여 꾸준히 저의
+                역량을 키워나가고 싶습니다.
             </p>
         </section>
         <!-- //section2 -->
@@ -990,35 +1017,43 @@
                 <div class="skill">
                     <div class="left">
                         <div class="img">
-                            <span>80%</span>
+                            <span class="percentage" data-percentage="80">0%</span>
                         </div>
                     </div>
                     <div class="right">
                         <h3>HTML & CSS</h3>
                         <p>
-                            다양한 웹 프로젝트에서의 경험을 바탕으로 HTML과 CSS를 능숙하게 활용하여 사용자 친화적인
-                            웹페이지를 제작할 수 있습니다. 시멘틱 마크업과 CSS 기술을 활용하여, 접근성이 뛰어난
-                            웹사이트를 구현하는 능력을 갖추었습니다.
+                            다양한 웹 프로젝트에서의 경험을 바탕으로 HTML과 CSS를 능숙하게 활용하여
+                            사용자 친화적인 웹페이지를 제작할 수 있습니다. 시멘틱 마크업과 CSS
+                            기술을 활용하여, 접근성이 뛰어난 웹사이트를 구현하는 능력을
+                            갖추었습니다.
                         </p>
                     </div>
                     <div class="icon">
-                        <img src="https://hyeji1364.github.io/port2/assets/img/coffee-icon.svg" alt="" />
+                        <img
+                            src="https://hyeji1364.github.io/port2/assets/img/coffee-icon.svg"
+                            alt=""
+                        />
                     </div>
                 </div>
                 <div class="skill">
                     <div class="left">
-                        <div class="img"></div>
+                        <span class="percentage" data-percentage="90">0%</span>
                     </div>
                     <div class="right">
                         <h3>HTML & CSS</h3>
                         <p>
-                            다양한 웹 프로젝트에서의 경험을 바탕으로 HTML과 CSS를 능숙하게 활용하여 사용자 친화적인
-                            웹페이지를 제작할 수 있습니다. 시멘틱 마크업과 CSS 기술을 활용하여, 접근성이 뛰어난
-                            웹사이트를 구현하는 능력을 갖추었습니다.
+                            다양한 웹 프로젝트에서의 경험을 바탕으로 HTML과 CSS를 능숙하게 활용하여
+                            사용자 친화적인 웹페이지를 제작할 수 있습니다. 시멘틱 마크업과 CSS
+                            기술을 활용하여, 접근성이 뛰어난 웹사이트를 구현하는 능력을
+                            갖추었습니다.
                         </p>
                     </div>
                     <div class="icon">
-                        <img src="https://hyeji1364.github.io/port2/assets/img/coffee-icon.svg" alt="" />
+                        <img
+                            src="https://hyeji1364.github.io/port2/assets/img/coffee-icon.svg"
+                            alt=""
+                        />
                     </div>
                 </div>
             </div>
@@ -1030,16 +1065,25 @@
             <h3 class="title">project</h3>
             <span class="sub">coding</span>
             <div class="img1">
-                <img src="https://hyeji1364.github.io/port2/assets/img/run-chracter.svg" alt="run" />
+                <img
+                    src="https://hyeji1364.github.io/port2/assets/img/run-chracter.svg"
+                    alt="run"
+                />
             </div>
             <div class="img2">
-                <img src="https://decathlon-yeyeweller.index.studio/static/images/stickers/star-blue.png" alt="star" />
+                <img
+                    src="https://decathlon-yeyeweller.index.studio/static/images/stickers/star-blue.png"
+                    alt="star"
+                />
             </div>
             <div class="workWrap">
                 <div class="center1"></div>
                 <div class="info1">
                     <h3>유튜브 API를 이용한 뮤직 사이트</h3>
-                    <p>원하는 음악을 재생 플레이를 통해 들을 수 있습니다. 내가 원하는 음악을 무료로 듣는 사이트</p>
+                    <p>
+                        원하는 음악을 재생 플레이를 통해 들을 수 있습니다. 내가 원하는 음악을 무료로
+                        듣는 사이트
+                    </p>
                     <div class="link">
                         <a href="#">소스 보기</a>
                         <a href="#">사이트 보기</a>
@@ -1061,6 +1105,8 @@
         <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
         <script src="https://unpkg.com/split-type"></script>
         <script>
+            gsap.registerPlugin(ScrollTrigger);
+
             const ani4 = gsap.timeline();
             ani4.to("#contact .img", {
                 scale: 0,
@@ -1073,6 +1119,43 @@
                 start: "top top",
                 scrub: true,
                 markers: false,
+            });
+
+            document.querySelectorAll("#header ul li a").forEach((anchor) => {
+                anchor.addEventListener("click", function (e) {
+                    e.preventDefault();
+
+                    const targetId = this.getAttribute("href").substring(1);
+                    const targetElement = document.getElementById(targetId);
+
+                    window.scrollTo({
+                        top: targetElement.offsetTop,
+                        behavior: "smooth",
+                    });
+                });
+            });
+
+            document.querySelectorAll(".percentage").forEach((element) => {
+                let percentage = element.getAttribute("data-percentage");
+
+                gsap.fromTo(
+                    element,
+                    { innerHTML: 0 },
+                    {
+                        innerHTML: percentage,
+                        duration: 2,
+                        scrollTrigger: {
+                            trigger: element,
+                            start: "top 80%",
+                            end: "bottom 60%",
+                        },
+                        ease: "none",
+                        roundProps: "innerHTML",
+                        onUpdate: function () {
+                            element.innerHTML = Math.round(element.innerHTML) + "%";
+                        },
+                    }
+                );
             });
         </script>
 
